# NangaParbat

./: .gitignore  CMakeLists.txt  FixedParametersg1.yaml  GitHubWiP.md  README.md
cli/: fit.py  (+5 more)
run/: AvailableBstar.cc  AvailableDataSets.cc  AvailableParameterisations.cc  CMakeLists.txt  ComputeChi2.cc  ComputeMeanReplica.cc  ComputePredictions.cc  CreateGrids.cc  CreateStructGrids.cc  CreateTables.cc  DirectPredictions.cc  Filter.cc  FitCLI.py  NangaParbat  PlotTMDs.cc  README.md  RunFit.cc
run/.ipynb_checkpoints/: E605_prefact-checkpoint.ipynb
src/: CMakeLists.txt
src/chi2/: ArtificialSystematics.cc  CMakeLists.txt  chisquare.cc
src/cuts/: CMakeLists.txt  Trainingcut.cc  cut.cc  cutfactory.cc  qcut.cc  wcut.cc  xcut.cc  xzcut.cc  zcut.cc
src/data/: CMakeLists.txt  datahandler.cc  datasets.cc  testdata.cc
src/fastinterface/: CMakeLists.txt  computetables.cc  convolutiontable.cc  createtmdgrid.cc  fastinterface.cc  tmdgrid.cc  twobodyphasespace.cc  twoparticlephasespace.cc  utilities.cc
src/minimisation/: CMakeLists.txt  fcnceres.cc  fcnminuit.cc  minimisation.cc
src/minimization/: Minimization
src/parameterisation/: CMakeLists.txt  meanreplica.cc  nonpertfunctions.cc  parameterisation.cc
src/preprocessing/: CMakeLists.txt  E605Datayaml.cc  PreprocessATLAS7TeV.cc  PreprocessCDFRunI.cc  PreprocessCDFRunII.cc  PreprocessCMS7TeV.cc  PreprocessCMS8TeV.cc  PreprocessD0RunI.cc  PreprocessD0RunII.cc  PreprocessE288.cc  PreprocessE605.cc  PreprocessLHCb13TeV.cc  PreprocessLHCb7TeV.cc  PreprocessLHCb8TeV.cc  mypreprocessCOMPASS.cc  mypreprocessHERMES.cc  oldpreprocessCOMPASS.cc  preprocessATLAS13TeV.cc  preprocessATLAS7TeV.cc  preprocessATLAS8TeV.cc  preprocessATLASLowMass.cc  preprocessCDFRunI.cc  preprocessCDFRunII.cc  preprocessCMS13TeV.cc  preprocessCMS7TeV.cc  preprocessCMS8TeV.cc  preprocessCOMPASS.cc  preprocessD0RunI.cc  preprocessD0RunII.cc  preprocessD0RunIImu.cc  preprocessE288.cc  preprocessE537.cc  preprocessE537_xF.cc  preprocessE605.cc  preprocessE615.cc  preprocessE615_xF.cc  preprocessE772.cc  preprocessE772_backup.cc  preprocessEICPseudodata.cc  preprocessHERMES.cc  (+6 more)
src/tmdgrid/: CMakeLists.txt  createstructgrid.cc  createtmdgrid.cc  factories.cc  structgrid.cc  tmdgrid.cc
src/utilities/: CMakeLists.txt  bstar.cc  direxists.cc  generategrid.cc  linearsystems.cc  listdir.cc  numtostring.cc  tostringwprecision.cc
tests/: BenchmarkNangaParbat.cc  CMakeLists.txt  DrellYanCrossSection.cc  EvolutionMatching.cc  FUUTGridProduction.cc  GridInterpolation.cc  GridProduction.cc  GridsConvolution.cc  IntegrationTest.cc  KinGridsConvolution.yaml  KinematicsFUUT.yaml  Makefile  SIDISCrossSection.cc  SIDISMultiplicities.cc  TableTest.cc  TestChi2.cc  TestConvolution.cc  TestMinimisation.cc  TestSIDISNormalisationFactors.cc  configDrellYan.yaml  plotgridvsdir.py  plottestgrid.py  qTintegration.cc
tests/PV17_NLL_FF/: PV17_NLL_FF.info
tests/PV17_NLL_FF/testresults/: test_Q_2.000000_x_0.100000.yaml  test_Q_2.000000_x_0.300000.yaml  test_Q_2.000000_x_0.500000.yaml  test_Q_2.000000_x_0.700000.yaml  test_Q_28.000000_x_0.100000.yaml  test_Q_28.000000_x_0.300000.yaml  test_Q_28.000000_x_0.500000.yaml  test_Q_28.000000_x_0.700000.yaml  test_Q_3.000000_x_0.100000.yaml  test_Q_3.000000_x_0.300000.yaml  test_Q_3.000000_x_0.500000.yaml  test_Q_3.000000_x_0.700000.yaml  test_Q_7.000000_x_0.100000.yaml  test_Q_7.000000_x_0.300000.yaml  test_Q_7.000000_x_0.500000.yaml  test_Q_7.000000_x_0.700000.yaml
tests/PV17_NLL_PDF/testresults/: test_Q_2.000000_x_0.000205.yaml  test_Q_2.000000_x_0.008070.yaml  test_Q_2.000000_x_0.017500.yaml  test_Q_2.000000_x_0.100000.yaml  test_Q_2.000000_x_0.300000.yaml  test_Q_2.000000_x_0.500000.yaml  test_Q_2.000000_x_0.700000.yaml  test_Q_28.000000_x_0.000205.yaml  test_Q_28.000000_x_0.008070.yaml  test_Q_28.000000_x_0.017500.yaml  test_Q_28.000000_x_0.100000.yaml  test_Q_28.000000_x_0.300000.yaml  test_Q_28.000000_x_0.500000.yaml  test_Q_28.000000_x_0.700000.yaml  test_Q_3.000000_x_0.000205.yaml  test_Q_3.000000_x_0.008070.yaml  test_Q_3.000000_x_0.017500.yaml  test_Q_3.000000_x_0.100000.yaml  test_Q_3.000000_x_0.300000.yaml  test_Q_3.000000_x_0.500000.yaml  test_Q_3.000000_x_0.700000.yaml  test_Q_7.000000_x_0.000205.yaml  test_Q_7.000000_x_0.008070.yaml  test_Q_7.000000_x_0.017500.yaml  test_Q_7.000000_x_0.100000.yaml  test_Q_7.000000_x_0.300000.yaml  test_Q_7.000000_x_0.500000.yaml  test_Q_7.000000_x_0.700000.yaml
tests/PV19_N3LL_PDF/: tGrid_PV19_PDF.info
tests/PV19_N3LL_PDF/testresults/: test_Q_2.000000_x_0.000205.yaml  test_Q_2.000000_x_0.008070.yaml  test_Q_2.000000_x_0.017500.yaml  test_Q_2.000000_x_0.100000.yaml  test_Q_2.000000_x_0.300000.yaml  test_Q_2.000000_x_0.500000.yaml  test_Q_2.000000_x_0.700000.yaml  test_Q_200.000000_x_0.000205.yaml  test_Q_200.000000_x_0.008070.yaml  test_Q_200.000000_x_0.017500.yaml  test_Q_200.000000_x_0.100000.yaml  test_Q_200.000000_x_0.300000.yaml  test_Q_200.000000_x_0.500000.yaml  test_Q_200.000000_x_0.700000.yaml  test_Q_246.643200_x_0.000205.yaml  test_Q_246.643200_x_0.008070.yaml  test_Q_246.643200_x_0.017500.yaml  test_Q_246.643200_x_0.100000.yaml  test_Q_246.643200_x_0.300000.yaml  test_Q_246.643200_x_0.500000.yaml  test_Q_246.643200_x_0.700000.yaml  test_Q_28.000000_x_0.000205.yaml  test_Q_28.000000_x_0.008070.yaml  test_Q_28.000000_x_0.017500.yaml  test_Q_28.000000_x_0.100000.yaml  test_Q_28.000000_x_0.300000.yaml  test_Q_28.000000_x_0.500000.yaml  test_Q_28.000000_x_0.700000.yaml  test_Q_43.426410_x_0.000205.yaml  test_Q_43.426410_x_0.008070.yaml  test_Q_43.426410_x_0.017500.yaml  test_Q_43.426410_x_0.100000.yaml  test_Q_43.426410_x_0.300000.yaml  test_Q_43.426410_x_0.500000.yaml  test_Q_43.426410_x_0.700000.yaml  test_Q_60.000000_x_0.000205.yaml  test_Q_60.000000_x_0.008070.yaml  test_Q_60.000000_x_0.017500.yaml  test_Q_60.000000_x_0.100000.yaml  (+17 more)
tests/TestGrid/: TestGrid.info
tools/: CMakeLists.txt  GridInterpolation.cc  GridsConvolution.cc  StructGridInterpolation.cc  TMDGridInterpolation.cc
tools/inputs/: GridsConvolution.yaml  StructGridInterpolation.yaml  TMDGridInterpolation.yaml
(+7827 files in other folders)
